<resources>
    <string name="app_name">ПЗ по ТПУЭС</string>
    <string name="nek">Нэк=</string>
    <string name="nap">Нап=</string>
    <string name="nau">Нау=</string>
    <string name="nvm">Нвм=</string>
    <string name="nkn">Нкн=</string>
    <string name="nat">Нат=</string>
    <string name="naf">Наф=</string>
    <string name="nt">Нт=</string>
    <string name="de">Д+Е=</string>
    <string name="d">Д=</string>
    <string name="dtpetp">Дтп+Етп=</string>
    <string-array name="list">
        <item>Нэк</item>
        <item>Нап</item>
        <item>Нау</item>
        <item>Нвм</item>
        <item>Нкн</item>
        <item>Нат</item>
        <item>Наф</item>
        <item>Нт</item>
        <item>Д+Е</item>
        <item>Д</item>
        <item>Дтп+Етп</item>
    </string-array>
    <string name="Theory">Теория</string>
    <string name="Info">Сведения о приложении</string>
    <string name="PZ1_Name">1.Оценка технологичности конструкций электронных модулей</string>
    <string name="theoryPZ1">
        \tЭлементы, которые устанавливаются вручную (и паяются вручную):
        светодиоды, кварцевые резонаторы, пъезодинамики, дисплеи(ЖК).
        \n\n\tSOIC - поверхностный монтаж, DIP - штыревой монтаж.
        \n\n\tВыделяют следующие основные варианты монтажа модулей
        (рисунок 1.1): \n\tа)односторонний поверхностный монтаж, в котором на одной
        стороне печатной платы расположены только Поверхностномонтируемые компоненты - ПМК (SMD); \n\tб)двухсторонний поверхностный монтаж, в котором на двух сторонах печатной платы расположены
        только ПМК; \n\tв)смешанный совмещенный монтаж, в котором на одной стороне
        печатной платы размещаются сложные ПМК и компоненты со штыревыми выводами; \n\tг)смешанный сложный монтаж, в котором на лицевой стороне печатной
        платы размещаются сложные ПМК и компоненты со штыревыми выводами, а
        на противоположной – только ПМК; \n\tд)смешанный разнесенный монтаж, где
        компоненты со штыревыми выводами размещаются на лицевой стороне печатной платы, а простые ПМК – на обратной стороне
    </string>
</resources>
